Edited_3 index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
-<body>
     <head>
-        <h3>2020204078 JOO DAYEONG</h3>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
+<body>
+	<h3>2020204078 주다영</h3>
 </body>
 </html>
